SEA-183: Fix banner padding on mobile

--- a/angular/src/app/app.component.scss
+++ b/angular/src/app/app.component.scss
@@ -72,13 +72,17 @@
 }
 
 @include mobile() {
-  .global-alert-banner {
-    padding-right: $mobile-help-button-width + 10px;
+  .main-content {
+    .global-alert-banner {
+      padding-right: $mobile-help-button-width + 10px;
+    }
   }
 }
 
 @include tablet() {
-  .global-alert-banner {
-    padding-right: $tablet-help-button-width + 10px;
+  .main-content {
+    .global-alert-banner {
+      padding-right: $mobile-help-button-width + 10px;
+    }
   }
 }
